// Vitest Snapshot v1

exports[`PropertyFilterOptions > renders for address > address 1`] = `
<div>
  <div
    class="input-group"
  >
    <div
      class="input-group"
    >
      <div
        class="row"
        controlid="input-searchBy"
        style="align-items: center;"
      >
        <div
          class="col-md-auto"
        />
        <div
          class="col-md-auto"
          style="padding: 0px;"
        >
          <select
            class="form-select form-control"
            name="searchBy"
            style="margin-left: 10px;"
          >
            <option
              class="option"
              value="address"
            >
              Address
            </option>
            <option
              class="option"
              value="pid"
            >
              PID/PIN
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="input-group-content"
    >
      <div
        class="sc-bZHTEL jIDdpx GeocoderAutoComplete"
      >
        <div
          class=""
        >
          <div>
            <input
              class="form-control"
              field="address"
              id="input-address"
              name="address"
              placeholder="Enter an address"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyFilterOptions > renders for pid > pid 1`] = `
<div>
  <div
    class="input-group"
  >
    <div
      class="input-group"
    >
      <div
        class="row"
        controlid="input-searchBy"
        style="align-items: center;"
      >
        <div
          class="col-md-auto"
        />
        <div
          class="col-md-auto"
          style="padding: 0px;"
        >
          <select
            class="form-select form-control"
            name="searchBy"
            style="margin-left: 10px;"
          >
            <option
              class="option"
              value="address"
            >
              Address
            </option>
            <option
              class="option"
              value="pid"
            >
              PID/PIN
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="input-group-content"
    >
      <div
        class="row"
        controlid="input-pid"
        style="align-items: center;"
      >
        <div
          class="col-md-auto"
        >
          <div>
            <input
              class="form-control"
              name="pid"
              placeholder="Enter a PID or PIN"
              style="margin-left: -5px; width: 136px; margin-right: 10px;"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
